--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 
 h1, h2, h3 {
   font-weight: 600;
+  text-align: center;
 }
 
 section {
@@ -86,14 +87,21 @@ nav {
   margin-bottom: 1rem;
 }
 
+.profile-pic.large {
+  width: 160px;
+  height: 160px;
+}
+
 .tagline {
   font-size: 1.1rem;
   color: #666;
+  margin: 0.2rem 0;
 }
 
 .tagline.highlight {
   color: #6c63ff;
   font-weight: 600;
+  font-size: 1.2rem;
 }
 
 /* Cards */
@@ -129,7 +137,7 @@ nav {
 /* Resume Button */
 .resume-button {
   display: inline-block;
-  margin-top: 1rem;
+  margin: 0.75rem 0.5rem;
   padding: 0.6rem 1.2rem;
   border: 2px solid #6c63ff;
   color: #6c63ff;
@@ -142,6 +150,11 @@ nav {
 .resume-button:hover {
   background-color: #6c63ff;
   color: #fff;
+}
+
+.resume-button.download::after {
+  content: " \2193";
+  font-weight: normal;
 }
 
 /* Footer */
