--- a/style.css
+++ b/style.css
@@ -8,7 +8,13 @@ body {
   scroll-behavior: smooth;
 }
 
-h1, h2, h3 {
+h1, h3 {
+  font-weight: 600;
+  color: #3aa76d;
+}
+
+h2 {
+  text-align: center;
   font-weight: 600;
   color: #3aa76d;
 }
@@ -154,7 +160,7 @@ nav {
 
 .exp-title {
   font-size: 0.95rem;
-  color: #555;
+  color: #63c487;
   margin-top: 0.2rem;
 }
 
