--- a/style.css
+++ b/style.css
@@ -155,12 +155,12 @@ nav {
 .exp-info h3 {
   margin: 0;
   font-size: 1.15rem;
-  color: #2b2b2b;
+  color: #3aa76d;
 }
 
 .exp-title {
   font-size: 0.95rem;
-  color: #63c487;
+  color: #2b2b2b;
   margin-top: 0.2rem;
 }
 
